--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "Benedetta Mariani"
-  avatar           : "profile.png"
+  avatar           : "image.jpg"
   bio              : "PhD student in Neuroscience"
-  location         : "Padova Neuroscience Center and Physics Department, University of Padova"
+  location         : "Padova Neuroscience Center"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=0jklzY4AAAAJ&hl=en"
