--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,9 @@ main:
 
   - title: "Talks"
     url: /talks/      
-  - title: "Blog"
-    url: /posts/  
+
   - title: "CV"
     url: /cv/
+    
+  - title: "Blog Posts"
+    url: /year-archive/
