--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=0jklzY4AAAAJ&hl=en"
   email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/Benedetta-Mariani"
+  researchgate     : "https://www.researchgate.net/profile/Benedetta-Mariani"
   uri              :
   bitbucket        :
   codepen          :
