--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "Mohammad Hadi Aarabi"
+  github           : "Mohammadhadiaarabi"
   google_plus      :
   keybase          :
   instagram        :
