--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Mohammad Hadi Aarabi"
-  avatar           : "avatar.png"
+  avatar           : "profile.png"
   bio              : "PhD student in Neuroscience"
   location         : "Padova Neuroscience Center"
   employer         :
