--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Mohammad Hadi Aarabi"
 title_separator          : "-"
 name                     : &name "Mohammad Hadi Aarabi"
 description              : &description "PhD student in Neuroscience"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://mohammadhadiaarabi.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://mohammadhadiaarabi.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
