--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=qDm9TF0AAAAJ&view_op=list_works&sortby=pubdate"
-  email            :
+  email            : "mohammadhadi.aarabi@unipd.it"
   researchgate     :  "https://www.researchgate.net/profile/Mohammad_Aarabi4"
   uri              :
   bitbucket        :
@@ -99,7 +99,7 @@ author:
   github           : "Mohammadhadiaarabi"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "mohammadhadi.aarabi"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
