--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Mohammad Hadi Aarabi"
 title_separator          : "-"
 name                     : &name "Mohammad Hadi Aarabi"
-description              : &description "PhD student in Neuroscience"
+description              : &description "PhD in Neuroscience"
 url                      : "https://mohammadhadiaarabi.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://mohammadhadiaarabi.github.io"
