--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Mohammad Hadi Aarabi"
   avatar           : "image.jpg"
-  bio              : "PhD student in Neuroscience"
+  bio              : "PhD in Neuroscience"
   location         : "Padova Neuroscience Center"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
